[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "legnoh-withings"
version = "0.0.1"
description = "Python client for the Withings API"
readme = "README.md"
requires-python = ">=3.14.5"
license = { text = "MIT" }
authors = [
  { name = "Ryoma Kai", email = "legnoh@lkj.io" }
]
dependencies = [
  "requests>=2.34.2"
]

[project.urls]
Homepage = "https://github.com/legnoh/python-withings"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.uv]
package = true

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
